[project]
name = "dist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "fastmcp>=3.4.4",
    "langchain-core>=1.4.9",
    "langchain-openai>=1.3.4",
    "langgraph>=1.2.8",
    "mcp>=1.28.1",
    "networkx>=3.6.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "sqlite-vec>=0.1.9",
    "tqdm>=4.68.4",
    "uvicorn>=0.51.0",
]
